# dandelion

./: .env.example  .gitignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  LICENSE.md  README.md  ecosystem.config.cjs  eslint.config.js  package.json  pnpm-lock.yaml  rolldown.config.js  rollup.config.js  serve.ts  server.js  todo.md  vitest.config.js
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  test.yml
.opencode/plans/: TODO.md
.opencode/templates/: agent-roles.md  contract.md  todo-template.md
knowledge/: content-script-fiber-access.md  react-fiber-surveyjs.md
public/: changelog.json  index.html  token-generator.css  token-generator.html  token-generator.js
scripts/: bench.js  build-chrome-manifest.js  build-firefox-manifest.js  build-firefox.js  build-manifest.js  copy-static.js  crx3.js  gen-license.mjs  gen-quota-token.js  gen-quota-token.mjs  generate-license-keys.js  package.js  remove-static.js  sign-firefox.js
src/: agreement-text.js  configuration.js  main.js  main2.js  manifest.firefox.json  manifest.json  store.js
src/bridge/: chrome.js
src/components/: agreementPopup.js  button.js  controlPanel.js  debugButton.js  excludeToggle.js  flashKvRow.js  flashPanel.js  keyboardBadge.js  marker.js  notCheckedToggle.js  pinToggle.js  profile.js  rowMarker.js  sendButton.js  skipButton.js  startButton.js  statusPanel.js  zenModeButton.js
src/handlers/: flashData.js  register-form.js  skrining-events.js  skrining-send.js  (+5 more)
test/: memory-backend.js  setup.js  store.test.js
tui/: Cargo.toml
tui/src/: app.rs  jwt.rs  main.rs
(+114 files in other folders)
