[package]
name = "dandelion-token-generator"
version = "1.0.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
cli-clipboard = "0.4"
regex-lite = "0.1"
